Enhancement: Add support for ByteSize and TimeDuration tokens